# cyb-engine

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  TODO.md  TODO.txt  cyb-engine.sln  premake5.lua  shaders.vcxproj
assets/models/: space_ship.glb  stone_arc.glb
cmake/: fetch-freetype.cmake  fetch-imgui.cmake  version.cmake
cyb-engine/: cyb-engine.vcxproj  cyb-engine.vcxproj.filters  premake5.lua
cyb-engine/source/: cyb-engine.h
cyb-engine/source/core/: EnumFlags.h  Helper.cpp  Helper.h  Intersect.cpp  Intersect.h  Mathlib.h  Noise.cpp  Noise.h  Platform.h  Platform_Win32.cpp  Profiler.cpp  Profiler.h  Random.h  RingBuffer.h  Timer.h  base-types.h  enum-flags.h  logger.cpp  logger.h  platform-win32.cpp  ring-buffer.h  serializer.cpp  serializer.h
cyb-engine/source/editor/: editor.cpp  editor.h  imgui-backend.cpp  imgui-backend.h  imgui-widgets.h  terrain-generator.cpp  terrain-generator.h
cyb-engine/source/graphics/: GraphicsDevice.h  ModelImport_3DS.cpp  ModelImport_GLTF.cpp  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  graphics-device-vulkan.cpp  graphics-device-vulkan.h  graphics-device.h  model-import-3ds.cpp  model-import-gltf.cpp  model-import.h  renderer.cpp  shader-compiler.cpp  shader-compiler.h
cyb-engine/source/graphics/API/: GraphicsDevice_Vulkan.cpp  GraphicsDevice_Vulkan.h
cyb-engine/source/hli/: application.cpp  application.h  render-path-2d.cpp  render-path-2d.h  render-path-3d.cpp  render-path.h
cyb-engine/source/input/: Input.h  Input_Win32.cpp
cyb-engine/source/systems/: ECS.h  EventSystem.cpp  EventSystem.h  JobSystem.cpp  JobSystem.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  event-system.h  job-system.cpp  resource-manager.cpp  resource-manager.h
engine/: CMakeLists.txt  config.h.in  cyb-engine.h  premake5.lua
engine/core/: arena.h  atomic_queue.h  cvar.cpp  cvar.h  dir-watcher-win32.cpp  directory_watcher.cpp  directory_watcher.h  enum_flags.h  filesystem.cpp  filesystem.h  hash.h  intersect.cpp  intersect.h  logger.cpp  logger.h  mathlib.h  mutex.h  noise.cpp  noise.h  non_copyable.h  platform.h  platform_win32.cpp  profiler.h  random.h  serializer.cpp  serializer.h  spinlock.h  sys-win32.cpp  sys.h  sys_win32.cpp  threadsafe_queue.h  timer.h  types.h
engine/editor/: editor.cpp  editor.h  filedialog-win32.cpp  filedialog.h  heightmap.cpp  heightmap.h  imgui_backend.cpp  imgui_backend.h  terrain_generator.cpp  terrain_generator.h  undo_manager.cpp  undo_manager.h  widgets.cpp  widgets.h
engine/graphics/: device.h  device_vulkan.cpp  device_vulkan.h  display-win32.cpp  display.cpp  display.h  image.cpp  image.h  model_import.h  model_import_gltf.cpp  renderer.cpp  renderer.h  shader_compiler.cpp  shader_compiler.h  window.h  window_win32.cpp
engine/hli/: application.cpp  application.h  canvas.h  renderpath.h  renderpath_2d.cpp  renderpath_2d.h  renderpath_3d.cpp  renderpath_3d.h
engine/input/: input-raw.cpp  input-raw.h  input.cpp  input.h  input_raw.cpp  input_raw.h
engine/shaders/: debug_line.frag  flat_shader.frag  flat_shader.geom  flat_shader.geom.glsl  flat_shader.vert  flat_shader_disney.geom  flat_shader_unlit.geom  globals.glsl  image.vert  imgui.frag  lighting.glsl  outline.frag  postprocess.vert  shader-interop.h  shader_interop.h  sky.frag  sky.vert
engine/source/: cyb-engine.h
engine/source/core/: arena.h  core-defs.h  enum-flags.h  enum_flags.h  filesystem.cpp  filesystem.h  hash.h  helper.cpp  helper.h  intersect.cpp  intersect.h  logger.cpp  logger.h  mathlib.h  noise.cpp  noise.h  platform-win32.cpp  platform.h  platform_win32.cpp  profiler.cpp  profiler.h  random.h  serializer.cpp  serializer.h  spinlock.h  timer.h
engine/source/editor/: editor.cpp  editor.h  heightmap.cpp  heightmap.h  imgui-backend.cpp  imgui-backend.h  imgui-widgets.h  imgui_backend.cpp  imgui_backend.h  terrain-generator.cpp  terrain-generator.h  terrain_generator.cpp  terrain_generator.h  triangulator.cpp  triangulator.h  undo-manager.cpp  undo-manager.h  undo_manager.cpp  widgets.cpp  widgets.h
engine/source/graphics/: device.h  device_vulkan.cpp  device_vulkan.h  graphics-device-vulkan.cpp  graphics-device-vulkan.h  graphics-device.h  model-import-gltf.cpp  model_import_3ds.cpp  model_import_gltf.cpp  renderer.cpp  renderer.h  shader-compiler.cpp  shader-compiler.h  shader_compiler.cpp
engine/source/hli/: application.cpp  application.h  canvas.h  render-path-2d.cpp  render-path-2d.h  render-path-3d.cpp  render-path-3d.h  render-path.h  renderpath.h  renderpath_2d.cpp  renderpath_2d.h  renderpath_3d.cpp
engine/source/input/: input-raw.cpp  input-raw.h  input-win32.cpp  input.cpp  input.h
engine/source/systems/: ecs.h  event-system.cpp  event-system.h  event_system.cpp  job-system.cpp  job-system.h  job_system.cpp  resource-manager.cpp  resource-manager.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h
engine/systems/: ecs.h  event_system.cpp  event_system.h  job_system.cpp  job_system.h  profiler.cpp  profiler.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h
game/: CMakeLists.txt  RCa27500  game.aps  game.cpp  game.h  game.rc  game.vcxproj  imgui.ini  imgui.ini2  main.cpp  main_windows.cpp  premake5.lua  resource.h
game/Assets/: arc01.3ds  cubes.3ds  delete.xcf  imgui.ini  ring.glb  rock01.glb  tree01.glb
shaders/: Shader_Interop2.h  debug_line.vert  flat_shader.geom.glsl  flat_shader.vert  flat_shader_unlit.geom  globals.glsl  image.frag  image.vert  imgui.frag  imgui.vert  lighting.glsl  sky.frag
tools/: gen_noise_tables.py  generate-project-files.bat  setup.py
tools/scripts/: generate-project-files.bat  setup.py
